added additional function to in-memory library saves